[package]
name = "ucom"
version = "0.1.3"
authors = ["Sander <sander.wittwer@dengineering.no>", "Balder <balder.klanderud@dengineering.no>"]
edition = "2021"
description = "A serial terminal."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.0.1"
clap = {version = "3.0.0-rc.4", features = ["derive", "cargo"]}

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
