[package]
name = "ucom"
version = "0.1.4"
authors = ["Sander <sander.wittwer@dengineering.no>", "Balder <balder.klanderud@dengineering.no>"]
edition = "2021"
description = "A serial terminal."

[dependencies]
serialport = "4"
clap = {version = "4", features = ["derive", "cargo"]}

chrono = "0.4"

regex = "1.5"

[build-dependencies]
clap = {version = "4", features = ["derive", "cargo"]}
clap_complete = "4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
